raffia/tests/error/scss/forward-at-rule/show-empty-variable.snap
---
source: raffia/tests/error.rs
---
error: unknown token
  ┌─ show-empty-variable.scss:1:19
  │
1 │ @forward "a" show $;
  │                   ^


